Do integration Test of Health Check

--- a/Connector/Connector/Connector.csproj
+++ b/Connector/Connector/Connector.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <Folder Include="Contracts" />
       <Folder Include="Entities" />
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
